k8s-practice/nginx/service.yml
kind: Service
apiVersion: v1
metadata:
  name: nginx-service
  namespace: nginx
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80 #port on which the service is exposed
  type: ClusterIP #clusterIP, NodePort, LoadBalancer
